<resources>
    <string name="app_name">JustJava Staff</string>
    <string name="advance_order">Advance order</string>

    <string name="cancel_order">Cancel Order</string>
    <string name="cinnamon">Cinnamon</string>
    <string name="chocolate">Chocolate</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>

    <string name="delivered">Delivered</string>

    <string name="email_address">Email address</string>

    <string name="help">Help</string>


    <string name="in_progress">In progress</string>
    <string name="items">Items</string>

    <string name="ksh">Ksh. %d</string>

    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>

    <string name="marshmallows">Marshmallows</string>

    <string name="order_color_codes">Order color codes</string>

    <string name="placeholder">Placeholder</string>
    <string name="pending">Pending</string>
    <string name="password">Password</string>
    <string name="price">Price:</string>

    <string name="quantity">Quantity:</string>

    <string name="set_order_to">Set order to</string>
    <string name="staff">Staff</string>
    <string name="settings">Settings</string>

    <string name="total_price_ksh">Total price: Ksh.</string>
    <string name="total_ksh">Total: Ksh.</string>
    <string name="total_price">Total price</string>
    <string name="total">Total:</string>

    <!--Because "Render problem caused by TextInputLayout-->
    <item name="visible" type="id" />
    <item name="masked" type="id" />

    <string name="PENDING_ORDERS_KEY">preference_pending_orders</string>
    <string name="IN_PROGRESS_ORDERS_KEY">preference_in_progress_orders</string>
    <string name="COMPLETED_ORDERS_KEY">preference_completed_orders</string>
    <string name="DELIVERED_ORDERS_KEY">preference_delivered_orders</string>
    <string name="CANCELLED_ORDERS_KEY">preference_cancelled_orders</string>
    <string name="customer_details">Customer details</string>
    <string name="order_id">Order ID</string>
    <string name="customer_phone">Customer Phone</string>
    <string name="additional_comments">Additional Comments</string>
    <string name="order_items">Order Items</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="_8_30_pm_18_may_2018">8:30 PM, 18 May 2018</string>
    <string name="order_date">Order Date</string>
</resources>
