<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.marknkamau.justjavastaff.ui.help.HelpActivity">

    <View
        android:id="@+id/view_pending"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_pending"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_pending"
        style="@style/main_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/pending"
        app:layout_constraintBottom_toBottomOf="@+id/view_pending"
        app:layout_constraintLeft_toRightOf="@+id/view_pending"
        app:layout_constraintTop_toTopOf="@+id/view_pending"
        app:layout_constraintVertical_bias="0.571" />

    <View
        android:id="@+id/view_in_progress"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_in_progress"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_pending" />

    <TextView
        android:id="@+id/tv_in_progress"
        style="@style/main_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/in_progress"
        app:layout_constraintBottom_toBottomOf="@+id/view_in_progress"
        app:layout_constraintLeft_toRightOf="@+id/view_in_progress"
        app:layout_constraintTop_toTopOf="@+id/view_in_progress"
        app:layout_constraintVertical_bias="0.428" />

    <View
        android:id="@+id/view_completed"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_completed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_in_progress" />

    <TextView
        android:id="@+id/tv_completed"
        style="@style/main_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/completed"
        app:layout_constraintBottom_toBottomOf="@+id/view_completed"
        app:layout_constraintLeft_toRightOf="@+id/view_completed"
        app:layout_constraintTop_toTopOf="@+id/view_completed"
        app:layout_constraintVertical_bias="0.428" />

    <View
        android:id="@+id/view_delivered"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_delivered"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_completed" />

    <TextView
        android:id="@+id/tv_delivered"
        style="@style/main_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/delivered"
        app:layout_constraintBottom_toBottomOf="@+id/view_delivered"
        app:layout_constraintLeft_toRightOf="@+id/view_delivered"
        app:layout_constraintTop_toTopOf="@+id/view_delivered"
        app:layout_constraintVertical_bias="0.571" />

    <View
        android:id="@+id/view_cancelled"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_cancelled"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_delivered" />

    <TextView
        android:id="@+id/tv_cancelled"
        style="@style/main_text_alt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="0dp"
        android:text="@string/cancelled"
        app:layout_constraintBottom_toBottomOf="@+id/view_cancelled"
        app:layout_constraintLeft_toRightOf="@+id/view_cancelled"
        app:layout_constraintTop_toTopOf="@+id/view_cancelled"
        app:layout_constraintVertical_bias="0.571" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:alpha=".87"
        android:text="@string/order_color_codes"
        android:textColor="@android:color/black"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
